# CCCConverter

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: convert_dict.py  test.py
src/cccconverter/: parse_dict.py  spilt.py
src/cccconverter/dict/: finals.csv  initials.csv  yuet_dict.csv
src/ccccoverter/: convert.py  parse_dict.py
src/dict/: yuet_dict.csv
